Complete left hand

--- a/tikz-ergodox-layout.tex
+++ b/tikz-ergodox-layout.tex
@@ -111,13 +111,53 @@
                         \typeout{\ergodox@keyname, \ergodox@cnum}
                         \def\ergodox@lineindex{-2}
                     \else
-                        \ergodox@tempkeycount=\ergodox@keycount
-                        \advance \ergodox@tempkeycount by -20
-                        \expandafter\def\expandafter\ergodox@cnum\expandafter{\the\ergodox@tempkeycount}
-                        \expandafter\def\expandafter\ergodox@keyindex\expandafter{\expandafter{\ergodox@cnum}}
-                        \expandafter\def\expandafter\ergodox@keyname\expandafter{\expandafter{\expandafter d\ergodox@cnum}}
-                        \typeout{\ergodox@keyname, \ergodox@cnum}
-                        \def\ergodox@lineindex{-3}
+                        \ifnum\ergodox@keycount<27
+                            \ergodox@tempkeycount=\ergodox@keycount
+                            \advance \ergodox@tempkeycount by -20
+                            \expandafter\def\expandafter\ergodox@cnum\expandafter{\the\ergodox@tempkeycount}
+                            \expandafter\def\expandafter\ergodox@keyindex\expandafter{\expandafter{\ergodox@cnum}}
+                            \expandafter\def\expandafter\ergodox@keyname\expandafter{\expandafter{\expandafter d\ergodox@cnum}}
+                            \typeout{\ergodox@keyname, \ergodox@cnum}
+                            \def\ergodox@lineindex{-3}
+                        \else
+                            \ifnum\ergodox@keycount<32
+                                \ergodox@tempkeycount=\ergodox@keycount
+                                \advance \ergodox@tempkeycount by -27
+                                \expandafter\def\expandafter\ergodox@cnum\expandafter{\the\ergodox@tempkeycount}
+                                \expandafter\def\expandafter\ergodox@keyindex\expandafter{\expandafter{\ergodox@cnum}}
+                                \expandafter\def\expandafter\ergodox@keyname\expandafter{\expandafter{\expandafter d\ergodox@cnum}}
+                                \typeout{\ergodox@keyname, \ergodox@cnum}
+                                \def\ergodox@lineindex{-4}
+                            \else
+                                \ifnum\ergodox@keycount<34
+                                    \ergodox@tempkeycount=\ergodox@keycount
+                                    \advance \ergodox@tempkeycount by -27
+                                    \expandafter\def\expandafter\ergodox@cnum\expandafter{\the\ergodox@tempkeycount}
+                                    \expandafter\def\expandafter\ergodox@keyindex\expandafter{\expandafter{\ergodox@cnum}}
+                                    \expandafter\def\expandafter\ergodox@keyname\expandafter{\expandafter{\expandafter d\ergodox@cnum}}
+                                    \typeout{\ergodox@keyname, \ergodox@cnum}
+                                    \def\ergodox@lineindex{-5}
+                                \else
+                                    \ifnum\ergodox@keycount<35
+                                        \ergodox@tempkeycount=\ergodox@keycount
+                                        \advance \ergodox@tempkeycount by -28
+                                        \expandafter\def\expandafter\ergodox@cnum\expandafter{\the\ergodox@tempkeycount}
+                                        \expandafter\def\expandafter\ergodox@keyindex\expandafter{\expandafter{\ergodox@cnum}}
+                                        \expandafter\def\expandafter\ergodox@keyname\expandafter{\expandafter{\expandafter d\ergodox@cnum}}
+                                        \typeout{\ergodox@keyname, \ergodox@cnum}
+                                        \def\ergodox@lineindex{-6}
+                                    \else
+                                        \ergodox@tempkeycount=\ergodox@keycount
+                                        \advance \ergodox@tempkeycount by -31
+                                        \expandafter\def\expandafter\ergodox@cnum\expandafter{\the\ergodox@tempkeycount}
+                                        \expandafter\def\expandafter\ergodox@keyindex\expandafter{\expandafter{\ergodox@cnum}}
+                                        \expandafter\def\expandafter\ergodox@keyname\expandafter{\expandafter{\expandafter d\ergodox@cnum}}
+                                        \typeout{\ergodox@keyname, \ergodox@cnum}
+                                        \def\ergodox@lineindex{-7}
+                                    \fi
+                                \fi
+                            \fi
+                        \fi
                     \fi
                 \fi
             \fi
@@ -151,7 +191,7 @@
                         \ifnum\ergodox@keycount=75 1\else
                         \ifnum\ergodox@keycount=76 1\else
                         0 \fi\fi\fi\fi=1 % double
-                        \expandafter\expandafter\expandafter\expandafter\expandafter\expandafter\expandafter\ergodox@doublekeypath\expandafter\expandafter\expandafter\ergodox@keyname\expandafter\ergodox@keyindex\lp@elem\ergodox@lineindex{0}{0}
+                        \expandafter\expandafter\expandafter\expandafter\expandafter\expandafter\expandafter\ergodox@doublekeypath\expandafter\expandafter\expandafter\ergodox@keyname\expandafter\ergodox@keyindex\lp@elem\ergodox@lineindex{0}{0.25}
                     \else
                         \expandafter\expandafter\expandafter\expandafter\expandafter\expandafter\expandafter\ergodox@keypath\expandafter\expandafter\expandafter\ergodox@keyname\expandafter\ergodox@keyindex\lp@elem\ergodox@lineindex{0}{0}
                     \fi
@@ -173,7 +213,11 @@
     {}{}{\char"07E}{\char"060},{}{}!1,{}{}@2,{}{}\#3,{}{}\$4,{}{}\%5,{}{}{}{Enter},
     {}{}{}{Tab},{}{}{}Q,{}{}{}W,{}{}{}E,{}{}{}R,{}{}{}T,{}{}\{[,
     {}{}{}{CTRL},{}{}{}A,{}{}{}S,{}{}{}D,{}{}{}F,{}{}{}G,
-    {}{}{}{Shift},{}{}{}Z,{}{}{}X,{}{}{}C,{}{}{}V,{}{}{}B,{}{}\}]
+    {}{}{}{Shift},{}{}{}Z,{}{}{}X,{}{}{}C,{}{}{}V,{}{}{}B,{}{}\}],
+    {}{}{}{L2},{}{}{}{Alt},{}{}{}{Esc},{}{}{}{Cmd},{}{}{}{Del},
+    {}{}{}{Tab},{}{}{}{L3},
+    {}{}{}{CTRL},
+    {}{}{}{Space},{}{}{}{BS},{}{}{}{Cmd}
 }
 
 \end{document}
