--- a/tikz-ergodox-layout.tex
+++ b/tikz-ergodox-layout.tex
@@ -147,13 +147,23 @@
                                         \typeout{\ergodox@keyname, \ergodox@cnum}
                                         \def\ergodox@lineindex{-6}
                                     \else
-                                        \ergodox@tempkeycount=\ergodox@keycount
-                                        \advance \ergodox@tempkeycount by -31
-                                        \expandafter\def\expandafter\ergodox@cnum\expandafter{\the\ergodox@tempkeycount}
-                                        \expandafter\def\expandafter\ergodox@keyindex\expandafter{\expandafter{\ergodox@cnum}}
-                                        \expandafter\def\expandafter\ergodox@keyname\expandafter{\expandafter{\expandafter d\ergodox@cnum}}
-                                        \typeout{\ergodox@keyname, \ergodox@cnum}
-                                        \def\ergodox@lineindex{-7}
+                                        \ifnum\ergodox@keycount<38
+                                            \ergodox@tempkeycount=\ergodox@keycount
+                                            \advance \ergodox@tempkeycount by -31
+                                            \expandafter\def\expandafter\ergodox@cnum\expandafter{\the\ergodox@tempkeycount}
+                                            \expandafter\def\expandafter\ergodox@keyindex\expandafter{\expandafter{\ergodox@cnum}}
+                                            \expandafter\def\expandafter\ergodox@keyname\expandafter{\expandafter{\expandafter d\ergodox@cnum}}
+                                            \typeout{\ergodox@keyname, \ergodox@cnum}
+                                            \def\ergodox@lineindex{-7}
+                                        \else
+                                            \ergodox@tempkeycount=\ergodox@keycount
+                                            \advance \ergodox@tempkeycount by -30
+                                            \expandafter\def\expandafter\ergodox@cnum\expandafter{\the\ergodox@tempkeycount}
+                                            \expandafter\def\expandafter\ergodox@keyindex\expandafter{\expandafter{\ergodox@cnum}}
+                                            \expandafter\def\expandafter\ergodox@keyname\expandafter{\expandafter{\expandafter e\ergodox@cnum}}
+                                            \typeout{\ergodox@keyname, \ergodox@cnum}
+                                            \def\ergodox@lineindex{0}
+                                        \fi
                                     \fi
                                 \fi
                             \fi
@@ -217,7 +227,8 @@
     {}{}{}{L2},{}{}{}{Alt},{}{}{}{Esc},{}{}{}{Cmd},{}{}{}{Del},
     {}{}{}{Tab},{}{}{}{L3},
     {}{}{}{CTRL},
-    {}{}{}{Space},{}{}{}{BS},{}{}{}{Cmd}
+    {}{}{}{Space},{}{}{}{BS},{}{}{}{Cmd},
+    {}{}{}{BS},{}{}\&6,{}{}{}7,{}{}{}8,{}{}{}9,{}{}{}0,{}{}=-
 }
 
 \end{document}
