--- a/tikz-ergodox-layout.tex
+++ b/tikz-ergodox-layout.tex
@@ -155,7 +155,7 @@
                                             \typeout{\ergodox@keyname, \ergodox@cnum}
                                             \def\ergodox@lineindex{-7}
                                         \else
-                                            \ifnum\ergodox@keycount<44
+                                            \ifnum\ergodox@keycount<45
                                                 \ergodox@tempkeycount=\ergodox@keycount
                                                 \advance \ergodox@tempkeycount by -30
                                                 \expandafter\def\expandafter\ergodox@cnum\expandafter{\the\ergodox@tempkeycount}
@@ -165,12 +165,12 @@
                                                 \def\ergodox@lineindex{0}
                                             \else
                                                 \ergodox@tempkeycount=\ergodox@keycount
-                                                \advance \ergodox@tempkeycount by -36
-                                                \expandafter\def\expandafter\ergodox@cnum\expandafter{\expandafter{\the\ergodox@tempkeycount}
+                                                \advance \ergodox@tempkeycount by -37
+                                                \expandafter\def\expandafter\ergodox@cnum\expandafter{\expandafter{\the\ergodox@tempkeycount}}
                                                 \expandafter\def\expandafter\ergodox@keyindex\expandafter{\expandafter{\ergodox@cnum}}
-                                                \expandafter\def\expandafter\ergodox@keyname\expandafter{\expandafter{\expandafter{\expandafter f\ergodox@cnum}}
+                                                \expandafter\def\expandafter\ergodox@keyname\expandafter{\expandafter{\expandafter f\ergodox@cnum}}
                                                 \typeout{\ergodox@keyname, \ergodox@cnum}
-                                                \def\ergodox@lineindex{1}
+                                                \def\ergodox@lineindex{-1}
                                             \fi
                                         \fi
                                     \fi
@@ -237,8 +237,8 @@
     {}{}{}{Tab},{}{}{}{L3},
     {}{}{}{CTRL},
     {}{}{}{Space},{}{}{}{BS},{}{}{}{Cmd},
-    {}{}{}{BS},{}{}\^6,{}{}\&7,{}{}*8,{}{}(9,{}{})0,{}{}\_-,
-    {}{}=+,{}{}{}Y,{}{}{}U,{}{}{}I,{}{}{}O,{}{}{}P,{}{}|$\backslash$
+    {}{}{}{BS},{}{}{}6,{}{}\&7,{}{}{}8,{}{}(9,{}{})0,{}{}\_-,
+    {}{}=+,{}{}{}Y,{}{}{}U,{}{}{}I,{}{}{}O,{}{}{}P,{}{}|{$\backslash$}
 }
 
 \end{document}
