--- a/tikz-ergodox-layout.tex
+++ b/tikz-ergodox-layout.tex
@@ -164,13 +164,33 @@
                                                 \typeout{\ergodox@keyname, \ergodox@cnum}
                                                 \def\ergodox@lineindex{0}
                                             \else
-                                                \ergodox@tempkeycount=\ergodox@keycount
-                                                \advance \ergodox@tempkeycount by -37
-                                                \expandafter\def\expandafter\ergodox@cnum\expandafter{\expandafter{\the\ergodox@tempkeycount}}
-                                                \expandafter\def\expandafter\ergodox@keyindex\expandafter{\expandafter{\ergodox@cnum}}
-                                                \expandafter\def\expandafter\ergodox@keyname\expandafter{\expandafter{\expandafter f\ergodox@cnum}}
-                                                \typeout{\ergodox@keyname, \ergodox@cnum}
-                                                \def\ergodox@lineindex{-1}
+                                                \ifnum\ergodox@keycount<52
+                                                    \ergodox@tempkeycount=\ergodox@keycount
+                                                    \advance \ergodox@tempkeycount by -37
+                                                    \expandafter\def\expandafter\ergodox@cnum\expandafter{\expandafter{\the\ergodox@tempkeycount}}
+                                                    \expandafter\def\expandafter\ergodox@keyindex\expandafter{\expandafter{\ergodox@cnum}}
+                                                    \expandafter\def\expandafter\ergodox@keyname\expandafter{\expandafter{\expandafter f\ergodox@cnum}}
+                                                    \typeout{\ergodox@keyname, \ergodox@cnum}
+                                                    \def\ergodox@lineindex{-1}
+                                                \else
+                                                    \ifnum\ergodox@keycount<58
+                                                        \ergodox@tempkeycount=\ergodox@keycount
+                                                        \advance \ergodox@tempkeycount by -43
+                                                        \expandafter\def\expandafter\ergodox@cnum\expandafter{\expandafter{\the\ergodox@tempkeycount}}
+                                                        \expandafter\def\expandafter\ergodox@keyindex\expandafter{\expandafter{\ergodox@cnum}}
+                                                        \expandafter\def\expandafter\ergodox@keyname\expandafter{\expandafter{\expandafter f\ergodox@cnum}}
+                                                        \typeout{\ergodox@keyname, \ergodox@cnum}
+                                                        \def\ergodox@lineindex{-2}
+                                                    \else
+                                                        \ergodox@tempkeycount=\ergodox@keycount
+                                                        \advance \ergodox@tempkeycount by -50
+                                                        \expandafter\def\expandafter\ergodox@cnum\expandafter{\expandafter{\the\ergodox@tempkeycount}}
+                                                        \expandafter\def\expandafter\ergodox@keyindex\expandafter{\expandafter{\ergodox@cnum}}
+                                                        \expandafter\def\expandafter\ergodox@keyname\expandafter{\expandafter{\expandafter f\ergodox@cnum}}
+                                                        \typeout{\ergodox@keyname, \ergodox@cnum}
+                                                        \def\ergodox@lineindex{-3}
+                                                    \fi
+                                                \fi
                                             \fi
                                         \fi
                                     \fi
@@ -238,7 +258,9 @@
     {}{}{}{CTRL},
     {}{}{}{Space},{}{}{}{BS},{}{}{}{Cmd},
     {}{}{}{BS},{}{}{\^{}}6,{}{}\&7,{}{}*8,{}{}(9,{}{})0,{}{}\_-,
-    {}{}=+,{}{}{}Y,{}{}{}U,{}{}{}I,{}{}{}O,{}{}{}P,{}{}|{$\backslash$}
+    {}{}=+,{}{}{}Y,{}{}{}U,{}{}{}I,{}{}{}O,{}{}{}P,{}{}|{$\backslash$},
+    {}{}{}H,{}{}{}J,{}{}{}K,{}{}{}L,{}{}:;,{}{}{}{Enter},
+    {}{}'",{}{}{}N,{}{}{}M,{}{}{<}{,},{}{}{>}{.},{}{}?/
 }
 
 \end{document}
