--- a/tikz-ergodox-layout.tex
+++ b/tikz-ergodox-layout.tex
@@ -262,7 +262,11 @@
     {}{}{}{BS},{}{}{\^{}}6,{}{}\&7,{}{}*8,{}{}(9,{}{})0,{}{}\_-,
     {}{}=+,{}{}{}Y,{}{}{}U,{}{}{}I,{}{}{}O,{}{}{}P,{}{}|{$\backslash$},
     {}{}{}H,{}{}{}J,{}{}{}K,{}{}{}L,{}{}:;,{}{}{}{Enter},
-    {}{}'",{}{}{}N,{}{}{}M,{}{}{<}{,},{}{}{>}{.},{}{}?/
+    {}{}'",{}{}{}N,{}{}{}M,{}{}{<}{,},{}{}{>}{.},{}{}?/,{}{}{}{Shift},
+    {}{}{}(,{}{}{}),{}{}{}[,{}{}{}],{}{}{}{L1},
+    {}{}{}{L3},{}{}{}{Tab},
+    {}{}{}{CTRL},
+    {}{}{}{Cmd},{}{}{}{Esc},{}{}{}{Enter}
 }
 
 \end{document}
