--- a/tikz-ergodox-layout.tex
+++ b/tikz-ergodox-layout.tex
@@ -184,7 +184,7 @@
                                                         \typeout{\ergodox@keyname, \ergodox@cnum}
                                                         \def\ergodox@lineindex{-2}
                                                     \else
-                                                        \ifnum\ergodox@keycount<63
+                                                        \ifnum\ergodox@keycount<65
                                                             \ergodox@tempkeycount=\ergodox@keycount
                                                             \advance \ergodox@tempkeycount by -50
                                                             \expandafter\def\expandafter\ergodox@cnum\expandafter{\expandafter{\the\ergodox@tempkeycount}}
@@ -192,6 +192,14 @@
                                                             \expandafter\def\expandafter\ergodox@keyname\expandafter{\expandafter{\expandafter f\ergodox@cnum}}
                                                             \typeout{\ergodox@keyname, \ergodox@cnum}
                                                             \def\ergodox@lineindex{-3}
+                                                        \else
+                                                            \ergodox@tempkeycount=\ergodox@keycount
+                                                            \advance \ergodox@tempkeycount by -55
+                                                            \expandafter\def\expandafter\ergodox@cnum\expandafter{\expandafter{\the\ergodox@tempkeycount}}
+                                                            \expandafter\def\expandafter\ergodox@keyindex\expandafter{\expandafter{\ergodox@cnum}}
+                                                            \expandafter\def\expandafter\ergodox@keyname\expandafter{\expandafter{\expandafter f\ergodox@cnum}}
+                                                            \typeout{\ergodox@keyname, \ergodox@cnum}
+                                                            \def\ergodox@lineindex{-4}
                                                         \fi
                                                     \fi
                                                 \fi
