--- a/tikz-ergodox-layout.tex
+++ b/tikz-ergodox-layout.tex
@@ -193,13 +193,15 @@
                                                             \typeout{\ergodox@keyname, \ergodox@cnum}
                                                             \def\ergodox@lineindex{-3}
                                                         \else
-                                                            \ergodox@tempkeycount=\ergodox@keycount
-                                                            \advance \ergodox@tempkeycount by -55
-                                                            \expandafter\def\expandafter\ergodox@cnum\expandafter{\expandafter{\the\ergodox@tempkeycount}}
-                                                            \expandafter\def\expandafter\ergodox@keyindex\expandafter{\expandafter{\ergodox@cnum}}
-                                                            \expandafter\def\expandafter\ergodox@keyname\expandafter{\expandafter{\expandafter f\ergodox@cnum}}
-                                                            \typeout{\ergodox@keyname, \ergodox@cnum}
-                                                            \def\ergodox@lineindex{-4}
+                                                            \ifnum\ergodox@keycount>70
+                                                                \ergodox@tempkeycount=\ergodox@keycount
+                                                                \advance \ergodox@tempkeycount by -55
+                                                                \expandafter\def\expandafter\ergodox@cnum\expandafter{\expandafter{\the\ergodox@tempkeycount}}
+                                                                \expandafter\def\expandafter\ergodox@keyindex\expandafter{\expandafter{\ergodox@cnum}}
+                                                                \expandafter\def\expandafter\ergodox@keyname\expandafter{\expandafter{\expandafter f\ergodox@cnum}}
+                                                                \typeout{\ergodox@keyname, \ergodox@cnum}
+                                                                \def\ergodox@lineindex{-4}
+                                                            \fi
                                                         \fi
                                                     \fi
                                                 \fi
