--- a/tikz-ergodox-layout.tex
+++ b/tikz-ergodox-layout.tex
@@ -293,11 +293,11 @@
 \keyassign{
     {}{}{\char"07E}{\char"060},{}{}!1,{}{}@2,{}{}\#3,{}{}\$4,{}{}\%5,{}{}{}{Enter},
     {}{}{}{Tab},{}{}{}Q,{}{}{}W,{}{}{}E,{}{}{}R,{}{}{}T,{}{}\{[,
-    {}{}{}{CTRL},{}{}{}A,{}{}{}S,{}{}{}D,{}{}{}F,{}{}{}G,
+    {}{}{}{Ctrl},{}{}{}A,{}{}{}S,{}{}{}D,{}{}{}F,{}{}{}G,
     {}{}{}{Shift},{}{}{}Z,{}{}{}X,{}{}{}C,{}{}{}V,{}{}{}B,{}{}\}],
     {}{}{}{L2},{}{}{}{Alt},{}{}{}{Esc},{}{}{}{Cmd},{}{}{}{Del},
     {}{}{}{Tab},{}{}{}{L3},
-    {}{}{}{CTRL},
+    {}{}{}{Ctrl},
     {}{}{}{Space},{}{}{}{BS},{}{}{}{Cmd},
     {}{}{}{BS},{}{}{\^{}}6,{}{}\&7,{}{}*8,{}{}(9,{}{})0,{}{}\_-,
     {}{}=+,{}{}{}Y,{}{}{}U,{}{}{}I,{}{}{}O,{}{}{}P,{}{}|{$\backslash$},
@@ -305,7 +305,7 @@
     {}{}'",{}{}{}N,{}{}{}M,{}{}{<}{,},{}{}{>}{.},{}{}?/,{}{}{}{Shift},
     {}{}{}(,{}{}{}),{}{}{}[,{}{}{}],{}{}{}{L1},
     {}{}{}{L3},{}{}{}{Tab},
-    {}{}{}{CTRL},
+    {}{}{}{Ctrl},
     {}{}{}{Cmd},{}{}{}{Esc},{}{}{}{Enter}
 }
 
