--- a/tikz-ergodox-layout.tex
+++ b/tikz-ergodox-layout.tex
@@ -79,12 +79,13 @@
   {doublevhsplit={#3}{#4}{#5}{#6}};
 }
 
-\def\keyassign#1{
+\def\keyassign#1#2{
     \newcount\ergodox@keycount
     \newcount\ergodox@tempkeycount
     \def\ergodox@longkeyoffset{0.0}
     \begin{tikzpicture}
-        \@for\lp@elem:=#1\do{
+        \node[anchor=west] (title) at (-9.75mm,6.5mm) {#1};
+        \@for\lp@elem:=#2\do{
             \ifnum\ergodox@keycount<7
                 \ergodox@tempkeycount=\ergodox@keycount
                 \expandafter\def\expandafter\ergodox@cnum\expandafter{\the\ergodox@tempkeycount}
@@ -290,7 +291,7 @@
 
 \begin{document}
 
-\keyassign{
+\keyassign{Basic Layer (L0)}{
     {}{}{\char"07E}{\char"060},{}{}!1,{}{}@2,{}{}\#3,{}{}\$4,{}{}\%5,{}{}{}{Enter},
     {}{}{}{Tab},{}{}{}Q,{}{}{}W,{}{}{}E,{}{}{}R,{}{}{}T,{}{}\{[,
     {}{}{}{Ctrl},{}{}{}A,{}{}{}S,{}{}{}D,{}{}{}F,{}{}{}G,
@@ -308,6 +309,27 @@
     {}{}{}{Ctrl},
     {}{}{}{Cmd},{}{}{}{Esc},{}{}{}{Enter}
 }
+
+
+\keyassign{Function Layer (L1)}{
+    {}{}{}{},{}{}{}{F1},{}{}{}{F2},{}{}{}{F3},{}{}{}{F4},{}{}{}{F5},{}{}{}{F6},
+    {}{}{}{},{}{}{}{},{}{}{}7,{}{}{}8,{}{}{}9,{}{}{}-,{}{}{}+,
+    {}{}{}{},{}{}{}{},{}{}{}4,{}{}{}5,{}{}{}6,{}{}{}*,
+    {}{}{}{},{}{}{}{},{}{}{}1,{}{}{}2,{}{}{}3,{}{}{}/,{}{}{}=,
+    {}{}{}{},{}{}{}{},{}{}{}0,{}{}{}{,},{}{}{}{.},
+    {}{}{}{},{}{}{}{},
+    {}{}{}{},
+    {}{}{}{},{}{}{}{},{}{}{}{},
+    {}{}{}{F7},{}{}{}{F8},{}{}{}{F9},{}{}{}{F10},{}{}{}{F11},{}{}{}{F12},{}{}{}{},
+    {}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{Up},{}{}{}{},{}{}{}{},{}{}{}{},
+    {}{}{}{},{}{}{}{Left},{}{}{}{Down},{}{}{}{Right},{}{}{}{},{}{}{}{},
+    {}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},
+    {}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},
+    {}{}{}{},{}{}{}{},
+    {}{}{}{},
+    {}{}{}{},{}{}{}{},{}{}{}{}
+}
+
 
 \end{document}
 
