--- a/tikz-ergodox-layout.tex
+++ b/tikz-ergodox-layout.tex
@@ -330,6 +330,45 @@
     {}{}{}{},{}{}{}{},{}{}{}{}
 }
 
+\keyassign{Media Layer (L2)}{
+    {}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},
+    {}{}{}{},{}{}{}{},{}{}{}{},{}{}{Mouse}{Up},{}{}{}{},{}{}{}{},{}{}{}{},
+    {}{}{}{},{}{}{}{},{}{}{Mouse}{Left},{}{}{Mouse}{Down},{}{}{Mouse}{Right},{}{}{}{},
+    {}{}{}{},{}{}{}{},{}{}{Wheel}{Click},{}{}{Wheel}{Up},{}{}{Wheel}{Click},{}{}{}{},{}{}{}{},
+    {}{}{}{},{}{}{}{},{}{}{Wheel}{Right},{}{}{Wheel}{Down},{}{}{Wheel}{Left},
+    {}{}{}{},{}{}{Mouse}{Accel2},
+    {}{}{Mouse}{Accel1},
+    {}{}{Left}{Click},{}{}{Right}{Click},{}{}{Mouse}{Accel0},
+    {}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},
+    {}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},
+    {}{}{}{Left},{}{}{}{Down},{}{}{}{Up},{}{}{}{Right},{}{}{}{},{}{}{}{},
+    {}{}{}{},{}{}{}{},{}{}{Media}{Play},{}{}{Media}{Prev},{}{}{Media}{Next},{}{}{}{},{}{}{}{},
+    {}{}{Vlm}{Up},{}{}{Vlm}{Down},{}{}{Vlm}{Mute},{}{}{}{},{}{}{}{},
+    {}{}{}{},{}{}{}{Reset},
+    {}{}{}{},
+    {}{}{}{},{}{}{}{},{}{}{}{}
+}
+
+\keyassign{Reversed Layer (L3)}{
+    {}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},
+    {}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},
+    {}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},
+    {}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},
+    {}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},
+    {}{}{}{},{}{}{}{},
+    {}{}{}{},
+    {}{}{}{},{}{}{}{},{}{}{}{},
+    {}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},
+    {}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},
+    {}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},
+    {}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},
+    {}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},{}{}{}{},
+    {}{}{}{},{}{}{}{},
+    {}{}{}{},
+    {}{}{}{},{}{}{}{},{}{}{}{}
+}
+
+
 
 \end{document}
 
